# image-energy

./: Cargo.toml  README.md
readme-images/: .gitignore
src/: config.rs  energy.rs  lab.rs  lib.rs  main.rs  process.rs  rgb.rs
